Update config .json

--- a/config-edited.json
+++ b/config-edited.json
@@ -16,13 +16,13 @@
     "EMAIL": "your-email@example.com",
     "PASSWORD": "your-password",
     "OTPKEY": "",
-    "BOTNAME": "Abrar Fahim Bot \ud83e\udd16",
-    "PREFIX": "/",
+    "BOTNAME": "Fahima😚🤞 \ud83e\udd16",
+    "PREFIX": "#",
     "ADMINBOT": [
-        "100000478146113"
+        "100090183762638"
     ],
     "NDH": [
-        "100000478146113"
+        "100090183762638"
     ],
     "DATABASE": {
         "sqlite": {
